# picobot

./: .gitignore  README.md  picobot-cli  pyproject.toml  requirements.txt
picobot/: __init__.py  agent.py  cli.py  skills.py  tools.py
tests/: test_cli.py  test_skill_scenarios.py  test_skills.py  test_tools.py
workspace/: Science_Research_2026.pptx  create_pptx.js  package-lock.json
