[project]
name = "picobot"
version = "0.1.0"
description = "A lightweight skills-first agent built with Google ADK"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
]

[project.scripts]
picobot = "picobot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["picobot"]

[tool.hatch.build]
include = [
    "picobot/**/*.py",
    "picobot/skills/**",
]
